--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ AuthType Basic
 AuthName "Restricted Access"
 Require valid-user
 
-Options +FollowSymLinks
-RewriteEngine on
-RewriteRule (.*) http://wiki.clarat.org/$1 [R=301,L]
+RewriteEngine On
+RewriteBase /
+RewriteCond %{HTTP_HOST} !wiki.clarat.org$ [NC]
+RewriteRule ^(.*)$ http://wiki.clarat.org/$1 [L,R=301]
