--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-RewriteEngine On
-RewriteBase /
-RewriteCond %{HTTP_HOST} !wiki.clarat.org$ [NC]
-RewriteRule ^(.*)$ http://wiki.clarat.org/$1 [L,R=301]
+#RewriteEngine On
+#RewriteBase /
+#RewriteCond %{HTTP_HOST} !wiki.clarat.org$ [NC]
+#RewriteRule ^(.*)$ http://wiki.clarat.org/$1 [L,R=301]
 #AuthUserFile /app/.htpasswd
 #AuthType Basic
 #AuthName "Restricted Access"
