--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	},
 	"require": {
 		"php": ">=5.3.2",
-		"psr/log": "1.0.0"
+		"psr/log": "1.0.0",
+		"ext-apcu": "*",
 	},
 	"require-dev": {
 		"phpunit/phpunit": "*"
@@ -26,7 +27,6 @@
 		"ext-fileinfo": "*",
 		"ext-mbstring": "*",
 		"ext-wikidiff2": "*",
-		"ext-apc": "*",
 		"monolog/monolog": "*"
 	}
 }
