fixed composer.json typo

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	"require": {
 		"php": ">=5.3.2",
 		"psr/log": "1.0.0",
-		"ext-apc": "*"
+		"ext-apcu": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "*"
